--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /obj
 /obj/Debug
 /obj/Debug/net8.0
+obj/Debug/net8.0/TeachingWebSite.AssemblyInfoInputs.cache
+obj/Debug/net8.0/TeachingWebSite.AssemblyInfo.cs
