--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /obj/Debug/net8.0
 obj/Debug/net8.0/TeachingWebSite.AssemblyInfoInputs.cache
 obj/Debug/net8.0/TeachingWebSite.AssemblyInfo.cs
+obj/Debug/net8.0/TeachingWebSite.AssemblyInfoInputs.cache
+obj/Debug/net8.0/TeachingWebSite.AssemblyInfo.cs
